ros2_robot_ws/log/build_2024-07-05_13-33-45/gripper_sub/stderr.log
  File "/home/pi/handsystem/ros2_robot_ws/install/gripper_sub/lib/python3.10/site-packages/gripper_sub/subscriber_member_function.py", line 150
    print("sendSTM_flag" self.sendSTM_flag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

